feat: Improve Chess mechanics

--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -2,3 +2,6 @@
 # - Finish defining final move encoding
 # - Define all chess rules required in order to generate legal moves
 # - Do legal moves generation and Perft tests
+
+# TODO[Low priority]:
+# - Label all sources with cpy rights
