--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -1,5 +1,5 @@
 # TODO:
-# - Finish defining final move encoding
+# - create attacksTo, attacksFrom to get isCheck, legal moves
 # - Define all chess rules required in order to generate legal moves
 # - Do legal moves generation and Perft tests
 
